# ecl

./: CMakeLists.txt  default.nix  flake.nix  pyproject.toml  setup.py
applications/: CMakeLists.txt
lib/: CMakeLists.txt
lib/geometry/tests/: geo_surface.cpp
lib/include/ert/util/: bool_vector.hpp  double_vector.hpp  int_vector.hpp  time_t_vector.hpp
lib/python/: init.cpp
lib/resdata/tests/: rd_nnc_export_intersect.cpp
lib/util/: bool_vector.cpp  double_vector.cpp  int_vector.cpp  time_t_vector.cpp
lib/util/tests/: ert_util_stringlist_test.cpp
nixpkgs/: cwrap.nix  package.nix
python/resdata/: __init__.py
src/clib/: CMakeLists.txt
src/clib/applications/: CMakeLists.txt
src/clib/lib/: CMakeLists.txt  init.cpp
src/resdata/: __init__.py
src/resdata/util/test/: extended_testcase.py
src/resdata/util/util/: __init__.py
tests/rd_tests/: test_rd_util.py  test_sum.py
tests/well_tests/: test_rd_well.py
